# PySelfMongo

./: .gitignore  .mongo_config_dev.yaml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: config.yml
PySelfMongo/: __init__.py  py_self_mongo.py
mongo_client/: __init__.py
self_mongo/: __init__.py  self_mongo.py
tests/: test_py_self_mongo.py  test_self_mongo.py
